--- a/SnakeAI.WinForms/SnakeAI.WinForms.csproj
+++ b/SnakeAI.WinForms/SnakeAI.WinForms.csproj
@@ -60,7 +60,7 @@
     <Compile Include="GameCanvasForm.Graph.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Piece.cs" />
+    <Compile Include="Population.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Snake.cs" />
